--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "assets/adaptive-icon.png",
     "scheme": "agendafamiliar",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.natanael.agendafamiliar"
@@ -26,7 +26,6 @@
       "favicon": "assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
       [
         "expo-splash-screen",
         {
@@ -41,8 +40,8 @@
       ]
     ],
     "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
+      "typedRoutes": false,
+      "reactCompiler": false
     },
     "extra": {
       "eas": {
