fix(build): re-enable New Architecture for Reanimated 4 compatibility

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "assets/adaptive-icon.png",
     "scheme": "agendafamiliar",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.natanael.agendafamiliar"
