--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-tab-view": "^4.2.2",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.5.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
